# Projet-Reseau

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  algo.seb  appflow  c  c2  client.c  clientV2.c  g3.col  launch_clients.sh  launch_server.sh  noeud.c  read_graph.c  read_graph.h  res  rg  s  s2  server.c  serverV2.c  tcp_communication.c  tcp_communication.h
00-backup/: Makefile  client.c  clientV2.c  launch_clients.sh  launch_server.sh  read_graph.c  server.c
graph_files/: 2505  g3.col  g4.col  g5.col
